// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`session actions should create an action for a successful login 1`] = `
Object {
  "payload": Object {
    "token": "token",
    "username": "username",
  },
  "type": "SESSION_SIGNED_IN",
}
`;

exports[`session actions should create an action to fetch user info 1`] = `
Object {
  "type": "SESSION_FETCH_USER_INFO",
}
`;

exports[`session actions should create an action to init the session 1`] = `
Object {
  "type": "SESSION_INIT",
}
`;

exports[`session actions should create an action to log the user in 1`] = `
Object {
  "payload": Object {
    "pass": "password",
    "user": "username",
  },
  "type": "SESSION_SIGN_IN",
}
`;

exports[`session actions should create an action to log the user out 1`] = `
Object {
  "type": "SESSION_SIGN_OUT",
}
`;

exports[`session actions should create an action to notify invalid token 1`] = `
Object {
  "type": "SESSION_TOKEN_INVALID",
}
`;

exports[`session actions should create an action to set user info 1`] = `
Object {
  "payload": Object {
    "displayName": "displayName",
    "photo": "photo",
    "pk": "pk",
  },
  "type": "SESSION_SET_USER_INFO",
}
`;
